--- a/Sky/Storyboards/Base.lproj/Main.storyboard
+++ b/Sky/Storyboards/Base.lproj/Main.storyboard
@@ -69,6 +69,9 @@
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clear-day" translatesAutoresizingMaskIntoConstraints="NO" id="t7B-Ov-EcV">
                                         <rect key="frame" x="143" y="97.5" width="128" height="128"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="WeatherIcon">
+                                            <bool key="isElement" value="YES"/>
+                                        </accessibility>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="128" id="4Dr-47-61v"/>
                                             <constraint firstAttribute="height" constant="128" id="ZOw-bs-72m"/>
@@ -99,6 +102,7 @@
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clear" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIF-Qa-EM1">
                                         <rect key="frame" x="187.5" y="233.5" width="39" height="20"/>
+                                        <accessibility key="accessibilityConfiguration" identifier="SummaryLabel"/>
                                         <fontDescription key="fontDescription" type="italicSystem" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
